kubernetes/apps/navidrome/navidrome/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  labels:
    app: navidrome-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: navidrome-app
    spec:
      # initContainers:
      #   - name: 'wireguard-template-replacement'
      #     image: 'busybox'
      #     env:
      #       - name: ADDRESS
      #         value: 10.43.255.254
      #     command:
      #       [
      #         'sh',
      #         '-c',
      #         'until wget -O /dev/null $ADDRESS:80; do sleep 1; done'
      #       ]
      containers:
        - image: bornav/navidrome-bornav-test-cloud-sync:v0.0
          name: navidrome
          resources:
            limits:
              cpu: 1000m
              memory: 500M
          # securityContext:
          #   # runAsGroup: 1000
          #   # runAsUser: 0
          #   privileged: true
          #   # capabilities:
          #   #   add:
          #   #     - NET_ADMIN
          volumeMounts:
            - mountPath: /config/navidrome.toml
              name: navidrome-configuration
              subPath: navidrome.toml
            - name: navidrome-data-folder
              mountPath: /data
            - name: pv-navidrome-music
              mountPath: /data/music
      volumes:
        - name: navidrome-configuration
          configMap:
            name: navidrome-config
        - name: navidrome-data-folder
          persistentVolumeClaim:
            claimName: navidrome-data
        - name: pv-navidrome-music
          persistentVolumeClaim:
            claimName: pv-navidrome-music
      restartPolicy: Always
